[gd_scene load_steps=22 format=2]

[ext_resource path="res://ASSETS/WorldTiles/tileYellow_04.png" type="Texture" id=1]
[ext_resource path="res://Jerry/Jerry.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level_1/world_tileset_one_way.tres" type="TileSet" id=3]
[ext_resource path="res://Level_1/ParallaxBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://ASSETS/coins/coin1.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/fonts/Alkalami-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Level_1/HUD.gd" type="Script" id=7]
[ext_resource path="res://ASSETS/hearts/heart.png" type="Texture" id=8]
[ext_resource path="res://Level_1/Area2D.gd" type="Script" id=9]
[ext_resource path="res://Coin/Coin.tscn" type="PackedScene" id=10]
[ext_resource path="res://Level_1/hearts.gd" type="Script" id=11]
[ext_resource path="res://Level_1/world_tileset.tres" type="TileSet" id=12]
[ext_resource path="res://Level_1/win_point.tscn" type="PackedScene" id=13]
[ext_resource path="res://NPCs/Book.tscn" type="PackedScene" id=14]
[ext_resource path="res://enemy/enemy.tscn" type="PackedScene" id=15]
[ext_resource path="res://NPCs/Dino1.tscn" type="PackedScene" id=16]

[sub_resource type="TileSet" id=1]
0/name = "tileYellow_04.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 3339.25, 91.5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.215686, 0.160784, 0.258824, 0.721569 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=4]
size = 70
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 6 )

[node name="Level1" type="Node2D"]

[node name="Tile unsolid" type="TileMap" parent="."]
tile_set = SubResource( 1 )
collision_layer = 2
collision_mask = 51
format = 1
tile_data = PoolIntArray( -131030, 0, 0, -131029, 0, 0, -131028, 0, 0, -131027, 0, 0, -65494, 0, 0, -65493, 0, 0, -65492, 0, 0, -65491, 0, 0, 42, 0, 0, 43, 0, 0, 44, 0, 0, 45, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65578, 0, 0, 65579, 0, 0, 65580, 0, 0, 65581, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196647, 0, 0, 196648, 0, 0, 196649, 0, 0, 196650, 0, 0, 196651, 0, 0, 196652, 0, 0, 196653, 0, 0, 196654, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262183, 0, 0, 262184, 0, 0, 262185, 0, 0, 262186, 0, 0, 262187, 0, 0, 262188, 0, 0, 262189, 0, 0, 262190, 0, 0, 262198, 0, 0, 262199, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327719, 0, 0, 327720, 0, 0, 327721, 0, 0, 327722, 0, 0, 327723, 0, 0, 327724, 0, 0, 327725, 0, 0, 327726, 0, 0, 327734, 0, 0, 327735, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393255, 0, 0, 393256, 0, 0, 393257, 0, 0, 393258, 0, 0, 393259, 0, 0, 393260, 0, 0, 393261, 0, 0, 393262, 0, 0, 393270, 0, 0, 393271, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458791, 0, 0, 458792, 0, 0, 458793, 0, 0, 458794, 0, 0, 458795, 0, 0, 458796, 0, 0, 458797, 0, 0, 458798, 0, 0, 458806, 0, 0, 458807, 0, 0 )

[node name="Tiles solid one way" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
collision_layer = 2
collision_mask = 51
format = 1
tile_data = PoolIntArray( -720875, 1, 0, -720874, 6, 0, -655339, 0, 0, -655338, 12, 0, -655337, 6, 0, -589803, 0, 0, -589802, 0, 0, -589801, 12, 0, -589800, 6, 0, -524267, 0, 0, -524266, 0, 0, -524265, 0, 0, -524264, 12, 0, -524263, 6, 0, -458731, 0, 0, -458730, 0, 0, -458729, 0, 0, -458728, 0, 0, -458727, 12, 0, -458726, 6, 0, -262148, 9, 0, -262147, 2, 0, -262146, 2, 0, -262145, 2, 0, -327680, 10, 0, -327649, 9, 0, -327648, 2, 0, -327647, 2, 0, -327646, 2, 0, -327645, 2, 0, -327644, 2, 0, -327643, 10, 0, -327629, 9, 0, -327628, 2, 0, -327627, 2, 0, -327626, 2, 0, -327625, 10, 0, -262084, 4, 0, -196606, 4, 0, -196566, 1, 0, -196565, 2, 0, -196564, 2, 0, -196563, 3, 0, -196543, 4, 0, -130996, 5, 0, -130995, 3, 0, -65492, 4, 0, -65461, 5, 0, -65460, 11, 0, -65459, 0, 0, 2, 1, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 3, 0, 24, 9, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 10, 0, 74, 5, 0, 75, 11, 0, 76, 0, 0, 77, 0, 0, 65609, 5, 0, 65610, 11, 0, 65611, 0, 0, 65612, 0, 0, 65613, 0, 0, 131111, 1, 0, 131112, 2, 0, 131113, 2, 0, 131114, 2, 0, 131115, 2, 0, 131116, 2, 0, 131117, 2, 0, 131118, 3, 0, 131144, 5, 0, 131145, 11, 0, 131146, 0, 0, 131147, 0, 0, 131148, 0, 0, 131149, 0, 0, 196662, 1, 0, 196663, 3, 0, 196669, 9, 0, 196670, 2, 0, 196671, 2, 0, 196672, 2, 0, 196673, 2, 0, 196674, 2, 0, 196675, 2, 0, 196676, 2, 0, 196677, 10, 0, 262153, 4, 0, 327720, 4, 0, 327734, 4, 0 )

[node name="Tiles solid" type="TileMap" parent="."]
tile_set = ExtResource( 12 )
collision_layer = 2
collision_mask = 51
format = 1
tile_data = PoolIntArray( -1048583, 0, 0, -1114021, 0, 0, -1114020, 0, 0, -1114019, 0, 0, -1114018, 0, 0, -1114017, 0, 0, -983047, 0, 0, -1048485, 0, 0, -1048484, 0, 0, -1048483, 0, 0, -1048482, 0, 0, -1048481, 0, 0, -917511, 0, 0, -982949, 0, 0, -982948, 0, 0, -982947, 0, 0, -982946, 0, 0, -982945, 0, 0, -851975, 0, 0, -917413, 0, 0, -917412, 0, 0, -917411, 0, 0, -917410, 0, 0, -917409, 0, 0, -786439, 0, 0, -851877, 0, 0, -851876, 0, 0, -851875, 0, 0, -851874, 0, 0, -851873, 0, 0, -720903, 0, 0, -786341, 0, 0, -786340, 0, 0, -786339, 0, 0, -786338, 0, 0, -786337, 0, 0, -655367, 0, 0, -720805, 0, 0, -720804, 0, 0, -720803, 0, 0, -720802, 0, 0, -720801, 0, 0, -589831, 0, 0, -655269, 0, 0, -655268, 0, 0, -655267, 0, 0, -655266, 0, 0, -655265, 0, 0, -524295, 0, 0, -589733, 0, 0, -589732, 0, 0, -589731, 0, 0, -589730, 0, 0, -589729, 0, 0, -458759, 0, 0, -524197, 0, 0, -524196, 0, 0, -524195, 0, 0, -524194, 0, 0, -524193, 0, 0, -393223, 0, 0, -458661, 0, 0, -458660, 0, 0, -458659, 0, 0, -458658, 0, 0, -458657, 0, 0, -327687, 0, 0, -393125, 0, 0, -393124, 0, 0, -393123, 0, 0, -393122, 0, 0, -393121, 0, 0, -262151, 0, 0, -327589, 0, 0, -327588, 0, 0, -327587, 0, 0, -327586, 0, 0, -327585, 0, 0, -196615, 0, 0, -262062, 1, 0, -262061, 2, 0, -262060, 2, 0, -262059, 2, 0, -262058, 2, 0, -262057, 2, 0, -262056, 2, 0, -262055, 2, 0, -262054, 2, 0, -262053, 0, 0, -262052, 0, 0, -262051, 0, 0, -262050, 0, 0, -262049, 0, 0, -131079, 0, 0, -196526, 0, 0, -196525, 0, 0, -196524, 0, 0, -196523, 0, 0, -196522, 0, 0, -196521, 0, 0, -196520, 0, 0, -196519, 0, 0, -196518, 0, 0, -196517, 0, 0, -196516, 0, 0, -196515, 0, 0, -196514, 0, 0, -196513, 0, 0, -65543, 0, 0, -130990, 0, 0, -130989, 0, 0, -130988, 0, 0, -130987, 0, 0, -130986, 0, 0, -130985, 0, 0, -130984, 0, 0, -130983, 0, 0, -130982, 0, 0, -130981, 0, 0, -130980, 0, 0, -130979, 0, 0, -130978, 0, 0, -130977, 0, 0, -7, 0, 0, -65454, 0, 0, -65453, 0, 0, -65452, 0, 0, -65451, 0, 0, -65450, 0, 0, -65449, 0, 0, -65448, 0, 0, -65447, 0, 0, -65446, 0, 0, -65445, 0, 0, -65444, 0, 0, -65443, 0, 0, -65442, 0, 0, -65441, 0, 0, 65529, 0, 0, 82, 0, 0, 83, 0, 0, 84, 0, 0, 85, 0, 0, 86, 0, 0, 87, 0, 0, 88, 0, 0, 89, 0, 0, 90, 0, 0, 91, 0, 0, 92, 0, 0, 93, 0, 0, 94, 0, 0, 95, 0, 0, 131065, 0, 0, 65618, 0, 0, 65619, 0, 0, 65620, 0, 0, 65621, 0, 0, 65622, 0, 0, 65623, 0, 0, 65624, 0, 0, 65625, 0, 0, 65626, 0, 0, 65627, 0, 0, 65628, 0, 0, 65629, 0, 0, 65630, 0, 0, 65631, 0, 0, 196601, 0, 0, 131154, 0, 0, 131155, 0, 0, 131156, 0, 0, 131157, 0, 0, 131158, 0, 0, 131159, 0, 0, 131160, 0, 0, 131161, 0, 0, 131162, 0, 0, 131163, 0, 0, 131164, 0, 0, 131165, 0, 0, 131166, 0, 0, 131167, 0, 0, 262137, 0, 0, 196690, 0, 0, 196691, 0, 0, 196692, 0, 0, 196693, 0, 0, 196694, 0, 0, 196695, 0, 0, 196696, 0, 0, 196697, 0, 0, 196698, 0, 0, 196699, 0, 0, 196700, 0, 0, 196701, 0, 0, 196702, 0, 0, 196703, 0, 0, 327673, 0, 0, 262226, 0, 0, 262227, 0, 0, 262228, 0, 0, 262229, 0, 0, 262230, 0, 0, 262231, 0, 0, 262232, 0, 0, 262233, 0, 0, 262234, 0, 0, 262235, 0, 0, 262236, 0, 0, 262237, 0, 0, 262238, 0, 0, 262239, 0, 0, 393209, 0, 0, 327762, 0, 0, 327763, 0, 0, 327764, 0, 0, 327765, 0, 0, 327766, 0, 0, 327767, 0, 0, 327768, 0, 0, 327769, 0, 0, 327770, 0, 0, 327771, 0, 0, 327772, 0, 0, 327773, 0, 0, 327774, 0, 0, 327775, 0, 0, 458745, 0, 0, 458746, 6, 0, 393298, 0, 0, 393299, 0, 0, 393300, 0, 0, 393301, 0, 0, 393302, 0, 0, 393303, 0, 0, 393304, 0, 0, 393305, 0, 0, 393306, 0, 0, 393307, 0, 0, 393308, 0, 0, 393309, 0, 0, 393310, 0, 0, 393311, 0, 0, 524281, 0, 0, 524282, 12, 0, 524283, 6, 0, 458834, 0, 0, 458835, 0, 0, 458836, 0, 0, 458837, 0, 0, 458838, 0, 0, 458839, 0, 0, 458840, 0, 0, 458841, 0, 0, 458842, 0, 0, 458843, 0, 0, 458844, 0, 0, 458845, 0, 0, 458846, 0, 0, 458847, 0, 0, 589817, 0, 0, 589818, 0, 0, 589819, 12, 0, 589820, 2, 0, 589821, 2, 0, 589822, 2, 0, 589823, 2, 0, 524288, 2, 0, 524289, 2, 0, 524290, 2, 0, 524291, 2, 0, 524292, 2, 0, 524293, 2, 0, 524294, 2, 0, 524295, 2, 0, 524296, 2, 0, 524297, 2, 0, 524298, 2, 0, 524299, 2, 0, 524300, 2, 0, 524301, 2, 0, 524302, 2, 0, 524303, 2, 0, 524304, 2, 0, 524305, 2, 0, 524306, 2, 0, 524307, 3, 0, 524313, 1, 0, 524314, 2, 0, 524315, 2, 0, 524316, 2, 0, 524317, 3, 0, 524323, 1, 0, 524324, 2, 0, 524325, 2, 0, 524326, 2, 0, 524327, 2, 0, 524328, 2, 0, 524329, 2, 0, 524330, 2, 0, 524331, 2, 0, 524332, 2, 0, 524333, 2, 0, 524334, 2, 0, 524335, 3, 0, 524341, 1, 0, 524342, 2, 0, 524343, 2, 0, 524344, 2, 0, 524345, 2, 0, 524346, 2, 0, 524347, 3, 0, 524353, 4, 0, 524359, 1, 0, 524360, 2, 0, 524361, 2, 0, 524362, 2, 0, 524363, 2, 0, 524364, 2, 0, 524365, 2, 0, 524366, 3, 0, 524370, 0, 0, 524371, 0, 0, 524372, 0, 0, 524373, 0, 0, 524374, 0, 0, 524375, 0, 0, 524376, 0, 0, 524377, 0, 0, 524378, 0, 0, 524379, 0, 0, 524380, 0, 0, 524381, 0, 0, 524382, 0, 0, 524383, 0, 0, 655353, 0, 0, 655354, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589849, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589853, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0, 589865, 0, 0, 589866, 0, 0, 589867, 0, 0, 589868, 0, 0, 589869, 0, 0, 589870, 0, 0, 589871, 0, 0, 589877, 0, 0, 589878, 0, 0, 589879, 0, 0, 589880, 0, 0, 589881, 0, 0, 589882, 0, 0, 589883, 0, 0, 589889, 0, 0, 589895, 0, 0, 589896, 0, 0, 589897, 0, 0, 589898, 0, 0, 589899, 0, 0, 589900, 0, 0, 589901, 0, 0, 589902, 0, 0, 589906, 0, 0, 589907, 0, 0, 589908, 0, 0, 589909, 0, 0, 589910, 0, 0, 589911, 0, 0, 589912, 0, 0, 589913, 0, 0, 589914, 0, 0, 589915, 0, 0, 589916, 0, 0, 589917, 0, 0, 589918, 0, 0, 589919, 0, 0, 720889, 0, 0, 720890, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655395, 0, 0, 655396, 0, 0, 655397, 0, 0, 655398, 0, 0, 655399, 0, 0, 655400, 0, 0, 655401, 0, 0, 655402, 0, 0, 655403, 0, 0, 655404, 0, 0, 655405, 0, 0, 655406, 0, 0, 655407, 0, 0, 655413, 0, 0, 655414, 0, 0, 655415, 0, 0, 655416, 0, 0, 655417, 0, 0, 655418, 0, 0, 655419, 0, 0, 655425, 0, 0, 655431, 0, 0, 655432, 0, 0, 655433, 0, 0, 655434, 0, 0, 655435, 0, 0, 655436, 0, 0, 655437, 0, 0, 655438, 0, 0, 655442, 0, 0, 655443, 0, 0, 655444, 0, 0, 655445, 0, 0, 655446, 0, 0, 655447, 0, 0, 655448, 0, 0, 655449, 0, 0, 655450, 0, 0, 655451, 0, 0, 655452, 0, 0, 655453, 0, 0, 655454, 0, 0, 655455, 0, 0, 786425, 0, 0, 786426, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720924, 0, 0, 720925, 0, 0, 720931, 0, 0, 720932, 0, 0, 720933, 0, 0, 720934, 0, 0, 720935, 0, 0, 720936, 0, 0, 720937, 0, 0, 720938, 0, 0, 720939, 0, 0, 720940, 0, 0, 720941, 0, 0, 720942, 0, 0, 720943, 0, 0, 720949, 0, 0, 720950, 0, 0, 720951, 0, 0, 720952, 0, 0, 720953, 0, 0, 720954, 0, 0, 720955, 0, 0, 720961, 0, 0, 720967, 0, 0, 720968, 0, 0, 720969, 0, 0, 720970, 0, 0, 720971, 0, 0, 720972, 0, 0, 720973, 0, 0, 720974, 0, 0, 720978, 0, 0, 720979, 0, 0, 720980, 0, 0, 720981, 0, 0, 720982, 0, 0, 720983, 0, 0, 720984, 0, 0, 720985, 0, 0, 720986, 0, 0, 720987, 0, 0, 720988, 0, 0, 720989, 0, 0, 720990, 0, 0, 720991, 0, 0 )

[node name="ParallaxBackground" parent="." instance=ExtResource( 4 )]

[node name="enemy" parent="." instance=ExtResource( 15 )]
modulate = Color( 1, 0.603922, 0.964706, 1 )
position = Vector2( -88, -357 )

[node name="enemy2" parent="." instance=ExtResource( 15 )]
modulate = Color( 0.466667, 0.513726, 1, 1 )
position = Vector2( 592, -42 )

[node name="enemy3" parent="." instance=ExtResource( 15 )]
modulate = Color( 1, 0.933333, 0.501961, 1 )
position = Vector2( 1728, -54 )

[node name="enemy4" parent="." instance=ExtResource( 15 )]
modulate = Color( 1, 0.482353, 0.482353, 1 )
position = Vector2( 2181, -371 )

[node name="enemy5" parent="." instance=ExtResource( 15 )]
modulate = Color( 0.411765, 0.819608, 1, 1 )
position = Vector2( 1768, 463 )

[node name="enemy6" parent="." instance=ExtResource( 15 )]
modulate = Color( 0.470588, 1, 0.454902, 1 )
position = Vector2( 2766, 81 )

[node name="enemy7" parent="." instance=ExtResource( 15 )]
modulate = Color( 0.537255, 0.6, 0.992157, 1 )
position = Vector2( 3425, -360 )

[node name="enemy8" parent="." instance=ExtResource( 15 )]
modulate = Color( 0.980392, 0.517647, 0.517647, 1 )
position = Vector2( 3603, 463 )

[node name="enemy9" parent="." instance=ExtResource( 15 )]
modulate = Color( 0.435294, 0.996078, 0.905882, 1 )
position = Vector2( 4178, 141 )

[node name="enemy10" parent="." instance=ExtResource( 15 )]
modulate = Color( 0.992157, 0.607843, 0.956863, 1 )
position = Vector2( 4808, 466 )

[node name="Coins" type="Node2D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( -288, 416 )

[node name="Coin2" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( 441, -45 )

[node name="Coin3" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( -86, -360 )

[node name="Coin4" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( 1378, -744 )

[node name="Coin5" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( 2819, -242 )

[node name="Coin6" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( 4713, 17 )

[node name="Coin7" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( 3514, 139 )

[node name="Coin8" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( 3618, 473 )

[node name="Coin9" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( 2208, -359 )

[node name="Coin10" parent="Coins" instance=ExtResource( 10 )]
position = Vector2( 4190, 470 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 3336, 976 )
collision_layer = 4
collision_mask = 5
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="win_point" parent="." instance=ExtResource( 13 )]
position = Vector2( -44, -6 )

[node name="Jerry" parent="." instance=ExtResource( 2 )]
position = Vector2( 1083, 457 )
collision_mask = 31
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="Jerry"]
current = true
limit_left = -350
limit_bottom = 700
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.3
drag_margin_right = 0.3

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Jerry"]
remote_path = NodePath("../Camera2D")

[node name="Book" parent="." instance=ExtResource( 14 )]
position = Vector2( 893, 474 )

[node name="DinoNPC" parent="." instance=ExtResource( 16 )]
position = Vector2( 5509, -291 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="Panel" type="Panel" parent="HUD"]
margin_left = 8.0
margin_top = 9.0
margin_right = 258.0
margin_bottom = 131.0
custom_styles/panel = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="HUD/Panel"]
margin_left = 5.0
margin_top = -18.0
margin_right = 108.0
margin_bottom = 106.0
texture = ExtResource( 5 )
expand = true

[node name="Coins" type="Label" parent="HUD/Panel"]
anchor_left = 0.105
anchor_top = 0.102
anchor_right = 0.105
anchor_bottom = 0.102
margin_left = 126.75
margin_top = -0.444
margin_right = 212.75
margin_bottom = 132.556
custom_colors/font_color = Color( 0.878431, 0.72549, 1, 1 )
custom_fonts/font = SubResource( 4 )
text = "X"
align = 1

[node name="Label" type="Label" parent="HUD/Panel"]
anchor_left = 0.105
anchor_top = 0.102
anchor_right = 0.105
anchor_bottom = 0.102
margin_left = 93.75
margin_top = 22.556
margin_right = 124.75
margin_bottom = 99.556
custom_colors/font_color = Color( 0.878431, 0.72549, 1, 1 )
custom_fonts/font = SubResource( 5 )
text = "X"

[node name="hearts" type="CanvasLayer" parent="."]
script = ExtResource( 11 )

[node name="heart" type="TextureRect" parent="hearts"]
margin_left = 6.0
margin_top = 133.0
margin_right = 98.0
margin_bottom = 225.0
texture = ExtResource( 8 )
expand = true

[node name="heart2" type="TextureRect" parent="hearts"]
margin_left = 80.0
margin_top = 134.0
margin_right = 172.0
margin_bottom = 226.0
texture = ExtResource( 8 )
expand = true

[node name="heart3" type="TextureRect" parent="hearts"]
margin_left = 155.0
margin_top = 135.0
margin_right = 247.0
margin_bottom = 227.0
texture = ExtResource( 8 )
expand = true

[node name="Timer" type="Timer" parent="hearts"]

[connection signal="coin_collected" from="Coins/Coin" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin2" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin3" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin4" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin5" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin6" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin7" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin8" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin9" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="coin_collected" from="Coins/Coin10" to="HUD" method="_on_Coin_coin_collected"]
[connection signal="body_entered" from="Area2D" to="Jerry" method="_on_Area2D_body_entered"]
[connection signal="damaged" from="Jerry" to="hearts" method="_on_Jerry_damaged"]
[connection signal="timeout" from="hearts/Timer" to="hearts" method="_on_Timer_timeout"]
